[package]
name = "sparta-proc-macros"
description = "Rust proc macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["extra-traits", "full", "visit", "derive"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
