[package]
name = "sparta"
license = "MIT"
description = "SPARTA is a library of software components specially designed for building high-performance static analyzers based on the theory of Abstract Interpretation."
homepage = "https://github.com/facebook/sparta"
repository = "https://github.com/facebook/sparta"
version = "0.1.1"
edition = "2021"

[dependencies]
smallvec = { version = "1.9.0", features = ["const_generics"] }
disjoint-sets = "0.4.2"
petgraph = "0.6.2"
sparta-proc-macros = { path = "../rust-proc-macros", version = "0.1.0" }

[dev-dependencies]
rand = "0.8.5"
